--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -56,9 +56,7 @@
         let map;
         let markers = {};
         const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders';
-        const trackingUrl = 'https://app.foodydelivery.com/rest/1.2/orders/tracking/';
         const authToken = '8d7c77946d534444a168bb7da794febf';
-        const corsProxyUrl = 'https://cors-anywhere.herokuapp.com/';
 
         function initMap() {
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
@@ -77,11 +75,10 @@
 
         async function fetchOrders() {
             try {
-                const response = await axios.get(`${corsProxyUrl}${firebaseFunctionUrl}`, {
+                const response = await axios.get(firebaseFunctionUrl, {
                     headers: {
                         'Authorization': authToken,
-                        'Content-Type': 'application/json;charset=UTF-8',
-                        'X-Requested-With': 'XMLHttpRequest'
+                        'Content-Type': 'application/json;charset=UTF-8'
                     }
                 });
                 const filteredOrders = response.data.filter(order => 
@@ -113,11 +110,11 @@
             });
         }
 
-        async function updateMap(orders) {
+        function updateMap(orders) {
             Object.values(markers).forEach(marker => marker.setMap(null));
             markers = {};
 
-            for (const order of orders) {
+            orders.forEach(order => {
                 if (order.deliveryPoint && order.deliveryPoint.coordinates) {
                     const { lat, lng } = order.deliveryPoint.coordinates;
                     const marker = new google.maps.Marker({
@@ -134,43 +131,25 @@
                     });
                 }
 
-                if (order.status === 'onGoing') {
-                    await updateCourierLocation(order.uid);
-                }
-            }
-        }
-
-        async function updateCourierLocation(orderUid) {
-            try {
-                const response = await axios.get(`${corsProxyUrl}${trackingUrl}${orderUid}`, {
-                    headers: {
-                        'Authorization': authToken,
-                        'Content-Type': 'application/json;charset=UTF-8',
-                        'X-Requested-With': 'XMLHttpRequest'
-                    }
-                });
-                const tracking = response.data;
-                if (tracking.courierLocationCoordinates) {
-                    const { lat, lng } = tracking.courierLocationCoordinates;
+                if (order.status === 'onGoing' && order.courier && order.courier.coordinates) {
+                    const { lat, lng } = order.courier.coordinates;
                     const courierMarker = new google.maps.Marker({
                         position: { lat, lng },
                         map: map,
-                        title: `Motoboy - Pedido #${orderUid}`,
+                        title: `Motoboy - Pedido #${order.id}`,
                         icon: {
                             url: 'http://maps.google.com/mapfiles/ms/icons/motorcycling.png',
                             scaledSize: new google.maps.Size(32, 32)
                         }
                     });
 
-                    markers[`courier-${orderUid}`] = courierMarker;
+                    markers[`courier-${order.uid}`] = courierMarker;
 
                     courierMarker.addListener('click', () => {
-                        showCourierDetails(orderUid, tracking);
+                        showCourierDetails(order);
                     });
                 }
-            } catch (error) {
-                console.error(`Erro ao buscar localização do motoboy para o pedido ${orderUid}:`, error);
-            }
+            });
         }
 
         function centerOrderOnMap(orderUid) {
@@ -210,19 +189,18 @@
             }
         }
 
-        function showCourierDetails(orderUid, tracking) {
+        function showCourierDetails(order) {
             const infoWindow = new google.maps.InfoWindow({
                 content: `
                     <div>
-                        <h3>Motoboy - Pedido #${orderUid}</h3>
-                        <p>Status: ${tracking.status}</p>
-                        ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
-                            `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
+                        <h3>Motoboy - Pedido #${order.id}</h3>
+                        <p>Nome: ${order.courier.courierName}</p>
+                        <p>Status: ${getStatusDisplay(order.status)}</p>
                     </div>
                 `
             });
 
-            const marker = markers[`courier-${orderUid}`];
+            const marker = markers[`courier-${order.uid}`];
             if (marker) {
                 infoWindow.open(map, marker);
             }
