--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -56,14 +56,21 @@
         let map;
         let markers = {};
         const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders';
-        const trackingUrl = 'https://app.foodydelivery.com/rest/1.2/orders/tracking/';
-        const authToken = '8d7c77946d534444a168bb7da794febf'; // Seu token de autorização
+        const trackingUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyTracking';
+        const authToken = '8d7c77946d534444a168bb7da794febf';
 
         function initMap() {
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
             map = new google.maps.Map(document.getElementById('map'), {
                 center: centerAddress,
-                zoom: 12
+                zoom: 16
+            });
+
+            new google.maps.Marker({
+                position: centerAddress,
+                map: map,
+                title: "Rua Serra do Mar, 1216, Potengi",
+                icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
             });
         }
 
@@ -76,7 +83,7 @@
                     }
                 });
                 const filteredOrders = response.data.filter(order => 
-                    ['ready', 'onGoing', 'accepted', 'dispatched'].includes(order.status)
+                    ['onGoing', 'ready', 'dispatched', 'accepted'].includes(order.status)
                 );
                 updateOrderList(filteredOrders);
                 updateMap(filteredOrders);
@@ -105,35 +112,35 @@
         }
 
         async function updateMap(orders) {
-            // Limpar marcadores existentes
             Object.values(markers).forEach(marker => marker.setMap(null));
             markers = {};
 
             for (const order of orders) {
-                const lat = order.deliveryPoint.coordinates.lat;
-                const lng = order.deliveryPoint.coordinates.lng;
-                const marker = new google.maps.Marker({
-                    position: {lat, lng},
-                    map: map,
-                    title: `Pedido #${order.id}`,
-                    icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
-                });
+                if (order.deliveryPoint && order.deliveryPoint.coordinates) {
+                    const { lat, lng } = order.deliveryPoint.coordinates;
+                    const marker = new google.maps.Marker({
+                        position: { lat, lng },
+                        map: map,
+                        title: `Pedido #${order.id}`,
+                        icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
+                    });
 
-                markers[order.uid] = marker;
+                    markers[order.uid] = marker;
 
-                marker.addListener('click', () => {
-                    showOrderDetails(order);
-                });
+                    marker.addListener('click', () => {
+                        showOrderDetails(order);
+                    });
+                }
 
-                if (order.status === 'onGoing' && order.courier) {
-                    await updateCourierLocation(order.uid);
+                if (order.status === 'onGoing') {
+                    await updateCourierLocation(order);
                 }
             }
         }
 
-        async function updateCourierLocation(orderUid) {
+        async function updateCourierLocation(order) {
             try {
-                const response = await axios.get(`${trackingUrl}${orderUid}`, {
+                const response = await axios.get(`${trackingUrl}?orderUid=${order.uid}`, {
                     headers: {
                         'Authorization': authToken,
                         'Content-Type': 'application/json;charset=UTF-8'
@@ -145,26 +152,29 @@
                     const courierMarker = new google.maps.Marker({
                         position: { lat, lng },
                         map: map,
-                        title: `Motoboy - Pedido #${orderUid}`,
-                        icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+                        title: `Motoboy - Pedido #${order.id}`,
+                        icon: {
+                            url: 'http://maps.google.com/mapfiles/ms/icons/motorcycling.png',
+                            scaledSize: new google.maps.Size(32, 32)
+                        }
                     });
 
-                    markers[`courier-${orderUid}`] = courierMarker;
+                    markers[`courier-${order.uid}`] = courierMarker;
 
                     courierMarker.addListener('click', () => {
-                        showCourierDetails(orderUid, tracking);
+                        showCourierDetails(order, tracking);
                     });
                 }
             } catch (error) {
-                console.error(`Erro ao buscar localização do motoboy para o pedido ${orderUid}:`, error);
+                console.error(`Erro ao buscar localização do motoboy para o pedido ${order.uid}:`, error);
             }
         }
 
         function centerOrderOnMap(orderUid) {
-            const marker = markers[orderUid];
+            const marker = markers[orderUid] || markers[`courier-${orderUid}`];
             if (marker) {
                 map.setCenter(marker.getPosition());
-                map.setZoom(15);
+                map.setZoom(16);
             }
         }
 
@@ -197,11 +207,12 @@
             }
         }
 
-        function showCourierDetails(orderUid, tracking) {
+        function showCourierDetails(order, tracking) {
             const infoWindow = new google.maps.InfoWindow({
                 content: `
                     <div>
-                        <h3>Motoboy - Pedido #${orderUid}</h3>
+                        <h3>Motoboy - Pedido #${order.id}</h3>
+                        <p>Nome: ${order.courier.courierName}</p>
                         <p>Status: ${tracking.status}</p>
                         ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
                             `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
@@ -209,18 +220,15 @@
                 `
             });
 
-            const marker = markers[`courier-${orderUid}`];
+            const marker = markers[`courier-${order.uid}`];
             if (marker) {
                 infoWindow.open(map, marker);
             }
         }
 
-        // Inicializar o mapa e buscar pedidos
         initMap();
         fetchOrders();
-
-        // Atualiza a cada 30 segundos
-        setInterval(fetchOrders, 30000);
+        setInterval(fetchOrders, 10000);
     </script>
 </body>
 </html>
