--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -283,7 +283,7 @@
 
         initMap();
         fetchOrders();
-        setInterval(fetchOrders, 10000);
+        setInterval(fetchOrders, 10000); // Atualiza a cada 10 segundos
     </script>
 </body>
 </html>
