--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -10,20 +10,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f0f0; }
-        .container { display: flex; height: 100vh; }
-        .sidebar { width: 300px; background-color: #fff; padding: 20px; overflow-y: auto; }
-        .main-content { flex-grow: 1; display: flex; flex-direction: column; }
-        #map { flex-grow: 1; }
-        .order-list { max-height: calc(100vh - 100px); overflow-y: auto; }
-        .order-item { background-color: #fff; margin-bottom: 10px; padding: 10px; border-radius: 5px; position: relative; }
-        .order-item:hover { background-color: #f0f0f0; }
-        .filter-section { margin-bottom: 20px; }
-        button { background-color: #4CAF50; color: white; border: none; padding: 10px; cursor: pointer; margin-top: 10px; }
-        button:hover { background-color: #45a049; }
-        .order-options { position: absolute; right: 10px; top: 10px; }
-        .order-options i { cursor: pointer; margin-left: 5px; }
-        .error { color: red; font-weight: bold; }
+        /* ... (estilos permanecem os mesmos) ... */
     </style>
 </head>
 <body>
@@ -56,7 +43,7 @@
         const db = firebase.firestore();
         let map;
         let markers = {};
-        const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders';
+        const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders/proxy';
         const trackingUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyTracking/tracking';
         const authToken = '8d7c77946d534444a168bb7da794febf';
         const foodyApiUrl = 'https://app.foodydelivery.com/rest/1.2/orders/';
@@ -83,7 +70,7 @@
         async function fetchOrders() {
             try {
                 const now = new Date();
-                const startDate = formatDate(new Date(now.getTime() - 24 * 60 * 60 * 1000)); // 24 horas atrás
+                const startDate = formatDate(new Date(now.getTime() - 24 * 60 * 60 * 1000));
                 const endDate = formatDate(now);
                 
                 console.log('Buscando pedidos da API Foody...');
@@ -108,155 +95,11 @@
                 saveOrdersToFirestore(filteredOrders);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
-                if (error.response) {
-                    console.error('Error response:', error.response.data);
-                    console.error('Error status:', error.response.status);
-                    console.error('Error headers:', error.response.headers);
-                } else if (error.request) {
-                    console.error('Error request:', error.request);
-                } else {
-                    console.error('Error message:', error.message);
-                }
                 document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
             }
         }
 
-        function updateOrderList(orders) {
-            const orderList = document.getElementById('orderList');
-            orderList.innerHTML = '';
-            orders.forEach(order => {
-                const orderDiv = document.createElement('div');
-                orderDiv.className = 'order-item';
-                orderDiv.innerHTML = `
-                    <h3>Pedido #${order.id}</h3>
-                    <p>Status: ${getStatusDisplay(order.status)}</p>
-                    <p>Cliente: ${order.customer.customerName}</p>
-                    ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
-                    <div class="order-options">
-                        <i class="fas fa-map-marker-alt" onclick="centerOrderOnMap('${order.uid}')"></i>
-                    </div>
-                `;
-                orderList.appendChild(orderDiv);
-            });
-        }
-
-        async function updateMap(orders) {
-            Object.values(markers).forEach(marker => marker.setMap(null));
-            markers = {};
-
-            for (const order of orders) {
-                if (order.deliveryPoint && order.deliveryPoint.coordinates) {
-                    const { lat, lng } = order.deliveryPoint.coordinates;
-                    const marker = new google.maps.Marker({
-                        position: { lat, lng },
-                        map: map,
-                        title: `Pedido #${order.id}`,
-                        icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
-                    });
-
-                    markers[order.uid] = marker;
-
-                    marker.addListener('click', () => {
-                        showOrderDetails(order);
-                    });
-                }
-
-                if (order.status === 'onGoing') {
-                    await updateCourierLocation(order);
-                }
-            }
-        }
-
-        async function updateCourierLocation(order) {
-            try {
-                const response = await axios.get(trackingUrl, {
-                    headers: {
-                        'Authorization': authToken,
-                        'Content-Type': 'application/json;charset=UTF-8'
-                    },
-                    params: {
-                        orderUid: order.uid
-                    }
-                });
-                const tracking = response.data;
-                if (tracking.courierLocationCoordinates) {
-                    const { lat, lng } = tracking.courierLocationCoordinates;
-                    const courierMarker = new google.maps.Marker({
-                        position: { lat, lng },
-                        map: map,
-                        title: `Motoboy - Pedido #${order.id}`,
-                        icon: {
-                            url: 'http://maps.google.com/mapfiles/ms/icons/motorcycling.png',
-                            scaledSize: new google.maps.Size(32, 32)
-                        }
-                    });
-
-                    markers[`courier-${order.uid}`] = courierMarker;
-
-                    courierMarker.addListener('click', () => {
-                        showCourierDetails(order, tracking);
-                    });
-                }
-            } catch (error) {
-                console.error(`Erro ao buscar localização do motoboy para o pedido ${order.uid}:`, error);
-            }
-        }
-
-        function centerOrderOnMap(orderUid) {
-            const marker = markers[orderUid] || markers[`courier-${orderUid}`];
-            if (marker) {
-                map.setCenter(marker.getPosition());
-                map.setZoom(16);
-            }
-        }
-
-        function getStatusDisplay(status) {
-            switch(status) {
-                case 'accepted': return 'Aceito';
-                case 'dispatched': return 'Despachado';
-                case 'onGoing': return 'A Caminho';
-                case 'ready': return 'Pronto';
-                default: return status;
-            }
-        }
-
-        function showOrderDetails(order) {
-            const infoWindow = new google.maps.InfoWindow({
-                content: `
-                    <div>
-                        <h3>Pedido #${order.id}</h3>
-                        <p>Cliente: ${order.customer.customerName}</p>
-                        <p>Endereço: ${order.deliveryPoint.address}</p>
-                        <p>Status: ${getStatusDisplay(order.status)}</p>
-                        ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
-                    </div>
-                `
-            });
-
-            const marker = markers[order.uid];
-            if (marker) {
-                infoWindow.open(map, marker);
-            }
-        }
-
-        function showCourierDetails(order, tracking) {
-            const infoWindow = new google.maps.InfoWindow({
-                content: `
-                    <div>
-                        <h3>Motoboy - Pedido #${order.id}</h3>
-                        <p>Nome: ${order.courier.courierName}</p>
-                        <p>Status: ${tracking.status}</p>
-                        ${tracking.pointsToDelivery && tracking.pointsToDelivery.length > 0 ? 
-                            `<p>Posição na rota: ${tracking.pointsToDelivery[0].position}</p>` : ''}
-                    </div>
-                `
-            });
-
-            const marker = markers[`courier-${order.uid}`];
-            if (marker) {
-                infoWindow.open(map, marker);
-            }
-        }
+        // ... (outras funções permanecem as mesmas) ...
 
         function saveOrdersToFirestore(orders) {
             console.log('Iniciando salvamento de pedidos no Firestore...');
@@ -265,18 +108,9 @@
                 db.collection('foodyOrders').doc(order.id.toString()).set(order)
                     .then(() => {
                         console.log('Pedido salvo com sucesso no Firestore:', order.id);
-                        // Verificar se o pedido foi realmente salvo
-                        return db.collection('foodyOrders').doc(order.id.toString()).get();
-                    })
-                    .then((docSnapshot) => {
-                        if (docSnapshot.exists) {
-                            console.log('Confirmado: Pedido existe no Firestore:', order.id);
-                        } else {
-                            console.error('Erro: Pedido não encontrado no Firestore após salvamento:', order.id);
-                        }
                     })
                     .catch(error => {
-                        console.error('Erro ao salvar ou verificar pedido:', order.id, error);
+                        console.error('Erro ao salvar pedido:', order.id, error);
                     });
             });
         }
